src/components/settings/style.module.scss
.settings {
  display: flex;
  flex-wrap: nowrap;
  justify-items: center;
  align-items: flex-start;
  height: 429px;
  max-width: 1000px;
  * {
    font-family: "SFProText", sans-serif;
  }

  flex: 1;
  padding-bottom: 37px;
  padding-right: 0;
  z-index: 2;

  gap: 20px;

  &__close {
    display: block;
    position: absolute;
    right: 25px;
    top: 25px;
    transition: 300ms background-color;
    padding: 5px;
    border-radius: 5px;
    cursor: pointer;
    &:hover {
      background-color: #00000022;
    }
  }

  &__bounds {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    display: flex;
    transition: 250ms opacity;
    opacity: 0;
    z-index: -1;
    backdrop-filter: blur(10px);
  }

  &__wrapper {
    margin: auto;
    position: relative;
    z-index: 10;
    width: calc(100% - 100px);
    max-width: 1000px;
    min-width: 730px;
    background-color: #fffffff0;
  }
  &__groups {
    width: 215px;
    border-radius: 12px;
    overflow: hidden;
    display: flex;
    gap: 1px;
    flex-direction: column;
    background-color: rgba(17, 17, 17, 0.25);
    margin-top: 20px;
    box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.2);
  }
  &__chosen {
    //width: 500px;
    display: flex;
    gap: 20px;
    overflow: scroll;
    flex-direction: column;
    align-self: stretch;
    overflow-x: visible;
    overflow-y: auto;
    flex: 1;
    padding-right: 20px;
    padding-top: 20px;
  }

  &__element {
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-width: 450px;
    gap: 10px;
  }
  &__group {
    height: 44px;
    overflow: hidden;
    background: #fff;
    line-height: 44px;
    padding-left: 10px;
    transition: 0.3s all;
    cursor: pointer;
    &_active {
      background-color: #e6e4e4;
    }
  }

  &__divider {
    width: 1px;
    background: rgba(60, 60, 67, 0.36);
    min-height: 100%;
    align-self: stretch;
  }

  &__input__form {
    display: flex;
    flex-wrap: nowrap;
    gap: 20px;
    width: 400px;
  }

  &__form__btn {
    width: 160px;
    overflow: hidden;
  }
  &__select {
    width: 300px;
  }

  &__header {
    font-size: 40px;
    margin-bottom: 20px;
  }
  &__validation {
    margin-left: 20px;
    margin-top: 10px;
    color: rgb(255, 56, 43);
  }
}

